--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -856,7 +856,7 @@
 
 <br>
 <br>
-<button type="submit" class="btn btn-primary btn-lg btn-block" @onclick="@AddIntegrante">Agregar</button>
+<button type="submit" class="btn btn-primary btn-lg btn-block" @onclick="AddIntegrante">Agregar</button>
 <br>
 </EditForm>
 </div>
