Correccion de Nombre del conyuge

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -603,7 +603,7 @@
   <label for="exampleInputEmail1">Estado Civil : </label>
  <label for="cbox2">Casado &nbsp;<input type="checkbox" @bind-value="@NewIntegrante.Estado_Civil"></label>&nbsp;&nbsp;
 <label for="cbox2">Soltero &nbsp;<input type="checkbox" @bind-value="@NewIntegrante.Estado_Civil"></label>
-<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Nombre del Esposo" @bind-value="@NewIntegrante.Estado_Civil">
+<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Nombre del Esposo/a" @bind-value="@NewIntegrante.Nombre_Conyuge">
   </div>
 
   <div class="col">
