--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -9,7 +9,7 @@
     <ul class="nav flex-column">
         
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="">
+            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-cloudy" aria-hidden="true"></span> Agregar Integrantes
             </NavLink>
         </li>
