--- a/Pages/Listado.razor
+++ b/Pages/Listado.razor
@@ -43,7 +43,7 @@
         <td><img src="@item.Foto" width="100"></td>
         <td><button class="btn btn-danger" @onclick="(() => DeleteIntegrante(item))">Delete</button></td>
         <td><button class="btn btn-warning" @onclick="(() => DeleteIntegrante(item))">Update</button></td>
-         <td><button class="btn btn-warning" @onclick="Detalle"></button></td>
+         <td><button class="btn btn-info" @onclick="Detalle">Details</button></td>
         </tr>
 }
         }
