--- a/Pages/Update.razor
+++ b/Pages/Update.razor
@@ -11,13 +11,13 @@
 <br>
 </center>
 <div>
-  <EditForm Model="@NewIntegrante"> 
+  <EditForm Model="@UpdateIntegrante"> 
 <div>
 
 
  
 <label for="exampleInputEmail1">Sexo : </label>&nbsp;&nbsp;
-<select name="Sexo" @bind="@NewIntegrante.Sexo">
+<select name="Sexo" @bind="@UpdateIntegrante.Sexo">
      <option value="Seleccionar">Seleccionar</option>
      <option value="Hombre" >Hombre</option>
      <option value="Mujer">Mujer</option>
@@ -38,12 +38,12 @@
   <div class="row">
       <div class="col">
   <label for="exampleInputEmail1">Nombres </label>
-    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Nombre" @bind-value="@NewIntegrante.Nombre">
+    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Nombre" @bind-value="@UpdateIntegrante.Nombre">
   </div>
   <br>
   <div class="col">
   <label for="exampleInputEmail1">Apellidos </label>
-    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Apellido" @bind-value="@NewIntegrante.Apellidos">
+    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Apellido" @bind-value="@UpdateIntegrante.Apellidos">
     </div>
     </div>
    <div class="row">
@@ -51,13 +51,13 @@
           <br>
           <br>
   <label for="exampleInputEmail1">Fecha de Nacimiento </label>
-    <input id="date" type="date" @bind-value="@NewIntegrante.Fecha_Nacimiento">
+    <input id="date" type="date" @bind-value="@UpdateIntegrante.Fecha_Nacimiento">
     </div>
      <div class="col">
            <br>
            <br>
 <label for="exampleInputEmail1">Pais de Nacimiento</label>
-<select name="pais" @bind="@NewIntegrante.Pais_Nacimiento">
+<select name="pais" @bind="@UpdateIntegrante.Pais_Nacimiento">
   <option value="Seleccionar" >Seleccionar</option>
   <option value="AF">Afganistán</option>
   <option value="AL">Albania</option>
@@ -303,7 +303,7 @@
   <div class="row">
       <div class="col">
 <label for="exampleInputEmail1">Ciudad de Nacimiento </label>
- <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Ciudad" @bind-value="@NewIntegrante.Ciudad_Nacimiento">
+ <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Ciudad" @bind-value="@UpdateIntegrante.Ciudad_Nacimiento">
   </div>
   <br>
   
@@ -311,7 +311,7 @@
       <br>
       <br>
 <label for="exampleInputEmail1">Pais de Residencia actual </label>
-<select name="pais" @bind="@NewIntegrante.Pais_Residencia" >
+<select name="pais" @bind="@UpdateIntegrante.Pais_Residencia" >
      <option value="Seleccionar">Seleccionar</option>
      <option value="AF">Afganistán</option>
      <option value="AL">Albania</option>
@@ -562,31 +562,31 @@
 
 
 <label for="exampleInputEmail1">Ciudad de Residencia Actual</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Provincia / sector / calle / No. de vivienda" @bind-value="@NewIntegrante.Ciudad_Residencia">
+    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Provincia / sector / calle / No. de vivienda" @bind-value="@UpdateIntegrante.Ciudad_Residencia">
 <br>
 <label for="exampleInputEmail1">Direccion</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Provincia / sector / calle / No. de vivienda" @bind-value="@NewIntegrante.Direccion">
+    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Provincia / sector / calle / No. de vivienda" @bind-value="@UpdateIntegrante.Direccion">
 <br>
     <div class="row">
       <div class="col">
   <label for="exampleInputEmail1">Telefono</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Tel." @bind-value="@NewIntegrante.Telefono">
+    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Tel." @bind-value="@UpdateIntegrante.Telefono">
   </div>
   <div class="col">
   <label for="exampleInputEmail1">Celular</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Celular" @bind-value="@NewIntegrante.Numero">
+    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Celular" @bind-value="@UpdateIntegrante.Numero">
     </div>
     </div>
     <br>
     <label for="exampleInputEmail1">Correo Electronico</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Correo Electronico" @bind-value="@NewIntegrante.Correo">
+    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Correo Electronico" @bind-value="@UpdateIntegrante.Correo">
 
 <div class="row">
       <div class="col">
 <br>
 <br>
 <label for="exampleInputEmail1">Tipo de Documento de Identidad : </label>
-<select name="Tipo_documento" @bind="@NewIntegrante.Tipo_Documento">
+<select name="Tipo_documento" @bind="@UpdateIntegrante.Tipo_Documento">
      <option value="Seleccionar">Seleccionar</option>
      <option value="Cedula" >Cedula</option>
      <option value="Pasaporte">Pasaporte</option>
@@ -599,7 +599,7 @@
   </div>
   <div class="col">
   <label for="exampleInputEmail1">Documento Identidad</label>
-    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Documento de Identidad" @bind-value="@NewIntegrante.Documento">
+    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Documento de Identidad" @bind-value="@UpdateIntegrante.Documento">
     </div>
     </div>
 </center>
@@ -614,26 +614,26 @@
       <div class="col">
 
   <label for="exampleInputEmail1">Estado Civil : </label>
-  <select name="Estado_civil" @bind="@NewIntegrante.Tipo_Documento">
+  <select name="Estado_civil" @bind="@UpdateIntegrante.Tipo_Documento">
      <option value="Seleccionar">Seleccionar</option>
      <option value="Casado" >Casado</option>
      <option value="Soltero">Soltero</option>
      
      </select>
-<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Nombre del Esposo/a" @bind-value="@NewIntegrante.Nombre_Conyuge">
+<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Nombre del Esposo/a" @bind-value="@UpdateIntegrante.Nombre_Conyuge">
   </div>
 
   <div class="col">
 
 <label for="exampleInputEmail1">Hijos : </label>
-<select name="Hijos" @bind="@NewIntegrante.Hijos">
+<select name="Hijos" @bind="@UpdateIntegrante.Hijos">
      <option value="Seleccionar">Seleccionar</option>
      <option value="Si" >Si</option>
      <option value="No">No</option>
      
      </select>
 <br>
-<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Numeros de Hijos" @bind-value="@NewIntegrante.Cantidad_Hijos">
+<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Numeros de Hijos" @bind-value="@UpdateIntegrante.Cantidad_Hijos">
 
     </div>
     </div>
@@ -648,13 +648,13 @@
       <div class="col">
 
   <label for="exampleInputEmail1">Profesion </label>
-<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Profesion" @bind-value="@NewIntegrante.Profesion">
+<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Profesion" @bind-value="@UpdateIntegrante.Profesion">
   </div>
 
   <div class="col">
 
 <label for="exampleInputEmail1">Ocupacion Actual</label>
-<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Ocupacion" @bind-value="@NewIntegrante.Ocupacion">
+<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Ocupacion" @bind-value="@UpdateIntegrante.Ocupacion">
 
     </div>
     </div>
@@ -663,13 +663,13 @@
       <div class="col">
 
 <label for="exampleInputEmail1">Nombre de Empresa o Negocio</label>
-<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Empresa o Negocio" @bind-value="@NewIntegrante.Nombre_Empresa">
+<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Empresa o Negocio" @bind-value="@UpdateIntegrante.Nombre_Empresa">
   </div>
 
   <div class="col">
 
 <label for="exampleInputEmail1">Telefono</label>
-        <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Tel." @bind-value="@NewIntegrante.Telefono_Empresa">
+        <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Tel." @bind-value="@UpdateIntegrante.Telefono_Empresa">
 
     </div>
     </div>
@@ -685,19 +685,19 @@
       <div class="col">
 
 <label for="exampleInputEmail1">Fecha de Convercion </label>
-    <input id="date" type="date" @bind-value="@NewIntegrante.Fecha_Conversion">
+    <input id="date" type="date" @bind-value="@UpdateIntegrante.Fecha_Conversion">
   </div>
 
   <div class="col">
 
 <label for="exampleInputEmail1">Fecha de Bautismo </label>
-    <input id="date" type="date" @bind-value="@NewIntegrante.Fecha_Bautismo">
+    <input id="date" type="date" @bind-value="@UpdateIntegrante.Fecha_Bautismo">
 
     </div>
      <div class="col">
 
 <label for="exampleInputEmail1">Fecha de aceptacion </label>
-    <input id="date" type="date" @bind-value="@NewIntegrante.Fecha_Miembro">
+    <input id="date" type="date" @bind-value="@UpdateIntegrante.Fecha_Miembro">
 
     </div>
     </div>
@@ -709,7 +709,7 @@
   <label for="exampleInputEmail1">Denominación	a	la	que	pertenece :  </label>
   <br>
     <div class="col">
-      <select name="Denominacion" @bind="@NewIntegrante.Denominacion">
+      <select name="Denominacion" @bind="@UpdateIntegrante.Denominacion">
      <option value="Seleccionar">Seleccionar</option>
      <option value="Bautista" >Bautista</option>
      <option value="Pentecostal">Pentecostal</option>
@@ -722,7 +722,7 @@
      <option value="Luterana">Luterana</option>
      </select>
      <label for="exampleInputEmail1">Otra: </label>
-<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Otra denominacion" @bind-value="@NewIntegrante.Denominacion">
+<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Otra denominacion" @bind-value="@UpdateIntegrante.Denominacion">
   
        
 </div>
@@ -736,13 +736,13 @@
       <div class="col">
 
   <label for="exampleInputEmail1">Nombre	de	la	Iglesia	a	la	que	asiste	actualmente</label>
-<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Profesion" @bind-value="@NewIntegrante.Nombre_Iglesia">
+<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Profesion" @bind-value="@UpdateIntegrante.Nombre_Iglesia">
   </div>
 
   <div class="col">
 
 <label for="exampleInputEmail1">Si asiste a esta Iglesia por un	tiempo menor a un año, ¿dónde	se congregaba	antes?</label>
-<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Iglesia" @bind-value="@NewIntegrante.Congregacion_Anterior">
+<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Iglesia" @bind-value="@UpdateIntegrante.Congregacion_Anterior">
 
     </div>
     </div>
@@ -750,14 +750,14 @@
       <div class="col">
 <br>
   <label for="exampleInputEmail1">Nombre	del	pastor	de	su	iglesia	actual</label>
-<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Pastor" @bind-value="@NewIntegrante.Nombre_Pastor">
+<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Pastor" @bind-value="@UpdateIntegrante.Nombre_Pastor">
   </div>
 
 
   <div class="col">
 <br>
 <label for="exampleInputEmail1">¿Ha	sido	disciplinado	alguna	vez? </label>
-<select name="Hijos" @bind="@NewIntegrante.Disciplina">
+<select name="Hijos" @bind="@UpdateIntegrante.Disciplina">
      <option value="Seleccionar">Seleccionar</option>
      <option value="Si" >Si</option>
      <option value="No">No</option>
@@ -772,7 +772,7 @@
     </center>
 <br>
     <label for="exampleInputEmail1">Causas</label>
-<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Causas" @bind-value="@NewIntegrante.Causas_Disciplina">
+<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Causas" @bind-value="@UpdateIntegrante.Causas_Disciplina">
 <br>
 
   <div class="row">
@@ -781,7 +781,7 @@
   <br>
     <div class="col">
  
- <select name="Ocupacion" @bind="@NewIntegrante.Ocupacion">
+ <select name="Ocupacion" @bind="@UpdateIntegrante.Ocupacion">
      <option value="Seleccionar">Seleccionar</option>
      <option value="Pastor" >Pastor</option>
      <option value="Anciano">Anciano</option>
@@ -802,14 +802,14 @@
       <div class="col">
 <br>
   <label for="exampleInputEmail1">¿Cuáles	son	los	ministerios	en	los	que	ha	servido?	</label>
-<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Pastor" @bind-value="@NewIntegrante.Pregunta1">
+<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Pastor" @bind-value="@UpdateIntegrante.Pregunta1">
   </div>
 
 
   <div class="col">
 <br>
 <label for="exampleInputEmail1">¿En	cuál	de	estos	ministerios	considera	que	tuvo	mayor	fruto?	¿Por	qué?</label>
-<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Cantidad" @bind-value="@NewIntegrante.Pregunta2">
+<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Cantidad" @bind-value="@UpdateIntegrante.Pregunta2">
 
     </div>
     </div>
@@ -819,7 +819,7 @@
       <div class="col">
 <br>
   <label for="exampleInputEmail1">Considerando	sus	dones	y	talentos,	¿a	qué	ministerio	cree	usted	que	Dios	lo	está	llamando?</label>
-<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Pastor" @bind-value="@NewIntegrante.Pregunta3">
+<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Pastor" @bind-value="@UpdateIntegrante.Pregunta3">
   </div>
 
   <div class="col">
@@ -828,13 +828,13 @@
 <label for="exampleInputEmail1">¿Qué	metas	tiene	para	su	vida?	</label>
   <br>
   <br>
-<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Cantidad" @bind-value="@NewIntegrante.Pregunta4">
+<input type="text" class="form-control" id="exampleInputEmail1" placeholder="Cantidad" @bind-value="@UpdateIntegrante.Pregunta4">
 
     </div>
     </div>
 <br>
 <label for="exampleInputEmail1">¿Cuenta	con	el	respaldo	de	sus	autoridades	eclesiásticas	para	realizar	estos	estudios?	 </label>
- <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Si/No" @bind-value="@NewIntegrante.Pregunta5">
+ <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Si/No" @bind-value="@UpdateIntegrante.Pregunta5">
 
 
 
@@ -849,7 +849,7 @@
   <div class="row">
       <div class="col">
   <label for="exampleInputEmail1">Nivel	de	estudio:	</label>
-  <select name="estudio" @bind="@NewIntegrante.Nivel_Estudio">
+  <select name="estudio" @bind="@UpdateIntegrante.Nivel_Estudio">
      <option value="Seleccionar">Seleccionar</option>
      <option value="PR" >Primaria</option>
      <option value="SE">Secundaria</option>
@@ -863,7 +863,7 @@
   <div class="col">
   
   <label for="exampleInputEmail1">¿Alguna	vez	ha	sido	expulsado	o	suspendido	de	alguna	institución? </label>
-  <select name="estudio" @bind="@NewIntegrante.Expulsado">
+  <select name="estudio" @bind="@UpdateIntegrante.Expulsado">
      <option value="Seleccionar">Seleccionar</option>
      <option value="Si" >Si</option>
      <option value="No">No</option>
@@ -874,11 +874,11 @@
 <br>
 
 <label for="exampleInputEmail1">	En	caso	afirmativo,	¿por	qué	razón?</label>
-<input type="text" class="form-control" id="" placeholder="Razon" @bind-value="@NewIntegrante.Razon_Expulsion">
+<input type="text" class="form-control" id="" placeholder="Razon" @bind-value="@UpdateIntegrante.Razon_Expulsion">
 
 <br>
 <br>
-<button type="submit" class="btn btn-primary btn-lg btn-block" @onclick="AddIntegrante">Agregar</button>
+<button type="submit" class="btn btn-primary btn-lg btn-block" @onclick="UpdateIntegranteData">Agregar</button>
 <br>
 </EditForm>
 </div>
@@ -886,16 +886,35 @@
 @code{
 
     IFileListEntry image;
+    Modelo UpdateIntegrante = new Modelo();
+    List<Modelo> modelos = new List<Modelo>();
 
     async Task HandleSelectImagen(IFileListEntry[] Images) 
     {
         image = Images.FirstOrDefault();
     }
-    public Modelo NewIntegrante {get; set;} = new Modelo();
+  private void SetIntegranteForUpdate(Modelo modelo){
 
-    public async Task AddIntegrante(){
-      await service.AddIntegranteAsync(NewIntegrante, image);
-      NewIntegrante= new Modelo();
-    } 
+      UpdateIntegrante = modelo;
+
+  }
+
+   private async Task UpdateIntegranteData(){
+
+    await service.UpdateIntegranteAsync(UpdateIntegrante);
+     await RefreshIntegrante();
+
+  }
+
+  protected override async Task OnInitializedAsync(){
+
+      await RefreshIntegrante();
+
+  }
+
+  private async Task RefreshIntegrante(){
+       modelos = await service.GetModelosAsync();
+  }
+
 
 }
