--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -614,7 +614,7 @@
       <div class="col">
 
   <label for="exampleInputEmail1">Estado Civil : </label>
-  <select name="Estado_civil" @bind="@NewIntegrante.Tipo_Documento">
+  <select name="Estado_civil" @bind="@NewIntegrante.Estado_Civil">
      <option value="Seleccionar">Seleccionar</option>
      <option value="Casado" >Casado</option>
      <option value="Soltero">Soltero</option>
@@ -781,7 +781,7 @@
   <br>
     <div class="col">
  
- <select name="Ocupacion" @bind="@NewIntegrante.Ocupacion">
+ <select name="Ocupaciones" @bind="@NewIntegrante.Ocupaciones">
      <option value="Seleccionar">Seleccionar</option>
      <option value="Pastor" >Pastor</option>
      <option value="Anciano">Anciano</option>
@@ -884,6 +884,8 @@
 </div>
 
 @code{
+
+    
 
     IFileListEntry image;
     List<Modelo> modelos = new List<Modelo>();
